fix(html-hw7): global gap

--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
     background-color: var(--bg-color);
     display: flex;
     flex-direction: column;
-    gap: 64px;
+    gap: 120px;
 }
 
 
